Agrega splash screen

--- a/app.json
+++ b/app.json
@@ -8,9 +8,9 @@
     "scheme": "myapp",
     "userInterfaceStyle": "automatic",
     "splash": {
-      "image": "./assets/images/splash.png",
-      "resizeMode": "contain",
-      "backgroundColor": "#ffffff"
+      "image": "./assets/images/logo.png",
+      "resizeMode": "native",
+      "backgroundColor": "#01aa59"
     },
     "updates": {
       "fallbackToCacheTimeout": 0
