--- a/app.json
+++ b/app.json
@@ -23,11 +23,7 @@
     },
     "android": {
       "package": "com.ykn.edefidelegados",
-      "versionCode": 6,
-      "adaptiveIcon": {
-        "foregroundImage": "./assets/images/adaptive-icon.png",
-        "backgroundColor": "#ffffff"
-      }
+      "versionCode": 6
     },
     "web": {
       "favicon": "./assets/images/favicon.png"
