--- a/package.json
+++ b/package.json
@@ -35,10 +35,15 @@
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
+    "@react-native-community/eslint-config": "^3.2.0",
     "@types/react": "~17.0.21",
     "@types/react-native": "~0.64.12",
+    "@typescript-eslint/eslint-plugin": "^5.50.0",
+    "eslint": "^8.33.0",
+    "eslint-config-prettier": "^8.6.0",
     "jest": "^26.6.3",
     "jest-expo": "~44.0.1",
+    "prettier": "^2.8.3",
     "react-test-renderer": "17.0.1",
     "typescript": "~4.3.5"
   },
