--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,7 @@
   "esModuleInterop": true,
   "compilerOptions": {
     "jsx": "react",
-    "strict": true
+    "strict": true,
+    "module": "es6"
   }
 }
