--- a/package.json
+++ b/package.json
@@ -14,39 +14,42 @@
     "preset": "jest-expo"
   },
   "dependencies": {
-    "@expo/vector-icons": "^13.0.0",
+    "@expo/metro-runtime": "~3.1.1",
+    "@expo/vector-icons": "^14.0.0",
     "@react-navigation/bottom-tabs": "^6.0.5",
     "@react-navigation/native": "^6.0.2",
     "@react-navigation/native-stack": "^6.1.0",
-    "expo": "~47.0.13",
-    "expo-asset": "~8.7.0",
-    "expo-constants": "~14.0.2",
-    "expo-font": "~11.0.1",
-    "expo-linking": "~3.3.1",
-    "expo-splash-screen": "~0.17.5",
-    "expo-status-bar": "~1.4.2",
-    "expo-updates": "~0.15.6",
-    "expo-web-browser": "~12.0.0",
-    "react": "18.1.0",
-    "react-dom": "18.1.0",
-    "react-native": "0.70.8",
-    "react-native-safe-area-context": "4.4.1",
-    "react-native-screens": "~3.18.0",
-    "react-native-web": "~0.18.9"
+    "expo": "^50.0.4",
+    "expo-asset": "~9.0.2",
+    "expo-constants": "~15.4.5",
+    "expo-font": "~11.10.2",
+    "expo-linking": "^6.2.2",
+    "expo-splash-screen": "~0.26.4",
+    "expo-status-bar": "~1.11.1",
+    "expo-updates": "~0.24.9",
+    "expo-web-browser": "~12.8.2",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-native": "0.73.2",
+    "react-native-pager-view": "6.2.3",
+    "react-native-safe-area-context": "4.8.2",
+    "react-native-screens": "~3.29.0",
+    "react-native-tab-view": "^3.5.2",
+    "react-native-web": "~0.19.6"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
     "@react-native-community/eslint-config": "^3.2.0",
-    "@types/react": "~17.0.21",
+    "@types/react": "~18.2.45",
     "@types/react-native": "~0.64.12",
     "@typescript-eslint/eslint-plugin": "^5.50.0",
     "eslint": "^8.33.0",
     "eslint-config-prettier": "^8.6.0",
-    "jest": "^26.6.3",
-    "jest-expo": "~44.0.1",
+    "jest": "^29.3.1",
+    "jest-expo": "~50.0.1",
     "prettier": "^2.8.3",
     "react-test-renderer": "17.0.1",
-    "typescript": "~4.3.5"
+    "typescript": "^5.3.0"
   },
   "private": true,
   "license": "UNLICENSED"
