--- a/app.json
+++ b/app.json
@@ -6,7 +6,7 @@
     "orientation": "portrait",
     "icon": "./assets/images/logo.png",
     "scheme": "myapp",
-    "userInterfaceStyle": "automatic",
+    "userInterfaceStyle": "light",
     "splash": {
       "image": "./assets/images/logo.png",
       "resizeMode": "contain",
@@ -19,11 +19,13 @@
       "**/*"
     ],
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "userInterfaceStyle": "light"
     },
     "android": {
       "package": "com.ykn.edefidelegados",
-      "versionCode": 8
+      "versionCode": 8,
+      "userInterfaceStyle": "light"
     },
     "web": {
       "favicon": "./assets/images/favicon.png"
