Permite imprimir carnets con datos parciales

--- a/package.json
+++ b/package.json
@@ -22,8 +22,11 @@
     "expo": "^50.0.4",
     "expo-asset": "~9.0.2",
     "expo-constants": "~15.4.5",
+    "expo-file-system": "~16.0.5",
     "expo-font": "~11.10.2",
     "expo-linking": "^6.2.2",
+    "expo-print": "~12.8.1",
+    "expo-sharing": "~11.10.0",
     "expo-splash-screen": "~0.26.4",
     "expo-status-bar": "~1.11.1",
     "expo-updates": "~0.24.9",
