Funcionalidad cambiar contraseña funcionando

--- a/app.json
+++ b/app.json
@@ -24,6 +24,8 @@
     },
     "android": {
       "package": "com.ykn.edefidelegados",
+      //Si no, cuando el teclado es visible, tira otras cosas para arriba
+      "softwareKeyboardLayoutMode": "pan", 
       "versionCode": 9,
       "userInterfaceStyle": "light"
     },
