Configura versión target de android para api 33 (android 13)

--- a/app.json
+++ b/app.json
@@ -38,7 +38,16 @@
       }
     },
     "plugins": [
-      "expo-font"
+      "expo-font",[
+        "expo-build-properties",
+        {
+          "android": {
+            "compileSdkVersion": 33,
+            "targetSdkVersion": 33,
+            "buildToolsVersion": "33.0.0"
+          }
+        }
+      ]
     ]
   }
 }
