--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@react-navigation/native-stack": "^6.1.0",
     "expo": "^50.0.4",
     "expo-asset": "~9.0.2",
+    "expo-build-properties": "~0.11.1",
     "expo-constants": "~15.4.5",
     "expo-file-system": "~16.0.5",
     "expo-font": "~11.10.2",
