--- a/package.json
+++ b/package.json
@@ -14,43 +14,43 @@
     "preset": "jest-expo"
   },
   "dependencies": {
-    "@expo/metro-runtime": "~3.1.1",
-    "@expo/vector-icons": "^14.0.0",
+    "@expo/metro-runtime": "~4.0.1",
+    "@expo/vector-icons": "^14.0.3",
     "@react-navigation/bottom-tabs": "^6.0.5",
     "@react-navigation/native": "^6.0.2",
     "@react-navigation/native-stack": "^6.1.0",
-    "expo": "^50.0.4",
-    "expo-asset": "~9.0.2",
-    "expo-build-properties": "~0.11.1",
-    "expo-constants": "~15.4.5",
-    "expo-file-system": "~16.0.5",
-    "expo-font": "~11.10.2",
-    "expo-linking": "^6.2.2",
-    "expo-print": "~12.8.1",
-    "expo-sharing": "~11.10.0",
-    "expo-splash-screen": "~0.26.4",
-    "expo-status-bar": "~1.11.1",
-    "expo-updates": "~0.24.9",
-    "expo-web-browser": "~12.8.2",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-native": "0.73.2",
-    "react-native-pager-view": "6.2.3",
-    "react-native-safe-area-context": "4.8.2",
-    "react-native-screens": "~3.29.0",
+    "expo": "^52.0.44",
+    "expo-asset": "~11.0.5",
+    "expo-build-properties": "~0.13.2",
+    "expo-constants": "~17.0.8",
+    "expo-file-system": "~18.0.12",
+    "expo-font": "~13.0.4",
+    "expo-linking": "~7.0.5",
+    "expo-print": "~14.0.3",
+    "expo-sharing": "~13.0.1",
+    "expo-splash-screen": "~0.29.22",
+    "expo-status-bar": "~2.0.1",
+    "expo-updates": "~0.27.4",
+    "expo-web-browser": "~14.0.2",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
+    "react-native": "0.76.9",
+    "react-native-pager-view": "6.5.1",
+    "react-native-safe-area-context": "4.12.0",
+    "react-native-screens": "~4.4.0",
     "react-native-tab-view": "^3.5.2",
-    "react-native-web": "~0.19.6"
+    "react-native-web": "~0.19.13"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9",
+    "@babel/core": "^7.24.0",
     "@react-native-community/eslint-config": "^3.2.0",
-    "@types/react": "~18.2.45",
+    "@types/react": "~18.3.12",
     "@types/react-native": "~0.64.12",
     "@typescript-eslint/eslint-plugin": "^5.50.0",
     "eslint": "^8.33.0",
     "eslint-config-prettier": "^8.6.0",
     "jest": "^29.3.1",
-    "jest-expo": "~50.0.1",
+    "jest-expo": "~52.0.6",
     "prettier": "^2.8.3",
     "typescript": "^5.3.0"
   },
